# objt

./: README.rst  pyproject.toml
objt/: __init__.py  thread.py
